--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging> 
 
-    <name>threadTop</name>
+    <name>GCStats</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
@@ -58,7 +58,7 @@
                     <descriptors>
                         <descriptor>assembly/bin.xml</descriptor>
                     </descriptors>
-                    <finalName>ThreadTop_${project.version}</finalName>
+                    <finalName>GCStats_${project.version}</finalName>
                     <outputDirectory>${project.build.directory}/dist</outputDirectory>
                     <workDirectory>${project.build.directory}/assembly/work</workDirectory>
                 </configuration>
