--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging> 
 
-    <name>threadTop</name>
+    <name>GCStats</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
@@ -99,8 +99,8 @@
         </dependency>
         <dependency>
             <groupId>com.sun</groupId>
-            <artifactId>toolsjar</artifactId>
-            <version>whatever</version>
+            <artifactId>tools</artifactId>
+            <version>1</version>
             <scope>system</scope>
             <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
